add: featch change color style; remove: div with describe spaces problem

--- a/cscc/style.scss
+++ b/cscc/style.scss
@@ -108,8 +108,8 @@ body {
 }
 
 .change__opacity {
-  color: red;
-  background-color: #004400;
+  color: #fff;
+  background-color: #000;
   opacity: 80%;
   scale: 1.4;
   transition: 200ms;
